# nct

./: .clang-format  .gitignore  CMakeLists.txt
.github/: copilot-instructions.md
src/: CMakeLists.txt
src/nct/: core.h  cuda.h  data.h  gpu.h  math.h
src/nct/core/: buf.h  mod.h
src/nct/corr/: CMakeLists.txt  det_corr.cc  det_corr.h  det_corr_imp.cu  det_corr_imp.h
src/nct/correct/: correct.cc  correct.h  correct_imp.h  correct_imp_gpu.cu  correct_impl.h  correct_impl_gpu.cu
src/nct/correction/: det_corr.cc  det_corr.h  det_corr_imp.cu  det_corr_imp.h
src/nct/cuda/: CMakeLists.txt  array.cc  array.h  device.cc  device.h  fft.cc  fft.h  kernel.h  mem.cc  mem.h  mod.cc  mod.h  stream.cc  stream.h  tex.cc  tex.h  type.cuh  type.h
src/nct/data/: CMakeLists.txt  base64.cc  base64.h  dcm.cc  dcm.h  mdu.cc  mdu.h  rawdata.cc  rawdata.h
src/nct/gpu/: CMakeLists.txt  fft.cc  fft.h  mem.cc  mem.h  mod.cc  mod.h  tex.cc  tex.h
src/nct/math/: CMakeLists.txt  array.h  fft.cc  fft.h  mat.h  mod.h  ndarray.h  ndview.h  nview.h  slice.h  vec.h
src/nct/mdu/: dicom.cc  dicom.h  mdu.cc  mdu.h
src/nct/params/: air.h  chess.h  det.h  det_pos.h  hcor.h  hdr.h  scan.h  scatter.h
src/nct/recon/: CMakeLists.txt  params.h
src/nct/recon/algos/: cone_.h  cone_bp.cu  cone_bp.h  cone_fp.cu
src/nct/recon/fdk/: fdk.cc  fdk.h  fdk_bp.h  fdk_bp_gpu.cu  fdk_filt.h  fdk_filt_cpu.cc  fdk_filt_gpu.cu  fdk_imp.cc  fdk_imp.cu  fdk_imp.h
test/: CMakeLists.txt
test/mdu/: load_mdu.cxx
tests/: CMakeLists.txt  main.cxx
tools/: CMakeLists.txt
tools/src/: dump_mdu.cc  mdu_dump.cc  mdu_unpack.cc  rawdata_dump.cc
tools/utils/: ramp_filter.py
tools/view/: det_pos.html  det_pos.py
